--- a/Reservoom/MainWindow.xaml
+++ b/Reservoom/MainWindow.xaml
@@ -7,6 +7,6 @@
         mc:Ignorable="d"
         Title="Reservoom" Height="450" Width="800">
     <Grid Margin="20 10" MaxWidth="600">
-    <views:ReservationListingView DataContext="{Binding CurrentViewModel}"/>
+    <views:MakeReservationView DataContext="{Binding CurrentViewModel}"/>
   </Grid>
 </Window>
